
## The '.' is to make sure install-data-hook rule is executed first
SUBDIRS = . \
	exporter \
	playlist_display \
	repository_editor \
	sorttab_display \
	track_display \
	details_editor \
	core_preferences \
	info_display \
	cover_display \
	coverweb \
	photo_editor \
	media_player \
	mserv

# indent
